# esp32_learn

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.bak  sdkconfig.camera.bak
extra_components/yahboom_esp32-camera/sensors/: gc2145.c
main/: CMakeLists.txt  main.cpp
main/src/: app_mywifi.c  my_usart.c  yahboom_camera.c
